--- a/tests/test_cases/2025/commands/7E4.7EC.220102|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220102|fc=1.yaml
@@ -41,6 +41,46 @@ test_cases:
     7EC24A1A1A1A1A1A1A1
     7EC25A1A1A1A0A0AAAA
 - expected_values:
+    SANTAFEHYB_HVBAT_CMU001_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU002_VOLT: 3.2
+    SANTAFEHYB_HVBAT_CMU003_VOLT: 3.22
+    SANTAFEHYB_HVBAT_CMU004_VOLT: 3.22
+    SANTAFEHYB_HVBAT_CMU005_VOLT: 3.22
+    SANTAFEHYB_HVBAT_CMU006_VOLT: 3.22
+    SANTAFEHYB_HVBAT_CMU007_VOLT: 3.22
+    SANTAFEHYB_HVBAT_CMU008_VOLT: 3.22
+    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU010_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU014_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU015_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU018_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU025_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU026_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU028_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU029_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU030_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU031_VOLT: 3.22
+    SANTAFEHYB_HVBAT_CMU032_VOLT: 3.24
+  response: |-
+    7EC1027620102FFFFFF
+    7EC21FF9FA0A1A1A1A1
+    7EC22A1A1A2A2A2A2A2
+    7EC23A2A2A2A2A2A2A2
+    7EC24A2A2A2A2A2A2A2
+    7EC25A2A2A2A1A2AAAA
+- expected_values:
     SANTAFEHYB_HVBAT_CMU001_VOLT: 3.2
     SANTAFEHYB_HVBAT_CMU002_VOLT: 3.2
     SANTAFEHYB_HVBAT_CMU003_VOLT: 3.2
@@ -371,35 +411,35 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU008_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU009_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU010_VOLT: 3.52
-    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU014_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU015_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU018_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU025_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU026_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU028_VOLT: 3.54
+    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU014_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU015_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU018_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU025_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU026_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU028_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU029_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU030_VOLT: 3.52
-    SANTAFEHYB_HVBAT_CMU031_VOLT: 3.52
-    SANTAFEHYB_HVBAT_CMU032_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU031_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU032_VOLT: 3.5
   response: |-
     7EC1027620102FFFFFF
     7EC21FFAEAEAFAFB0B0
-    7EC22B0B0B0B0B1B1B1
-    7EC23B1B1B1B1B1B1B1
-    7EC24B1B1B1B1B1B1B1
-    7EC25B1B0B0B0B0AAAA
+    7EC22B0B0B0B0B0B0B0
+    7EC23B0B0B0B0B0B0B0
+    7EC24B0B0B0B0B0B0B0
+    7EC25B0B0B0AFAFAAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU001_VOLT: 3.48
     SANTAFEHYB_HVBAT_CMU002_VOLT: 3.5
