--- a/tests/test_cases/2025/commands/7E0.0106.yaml
+++ b/tests/test_cases/2025/commands/7E0.0106.yaml
@@ -4,5 +4,5 @@ test_cases:
     SHRTFT1: -25
   response: '7E803410660'
 - expected_values:
-    SHRTFT1: 9.375
-  response: 7E80341068C
+    SHRTFT1: 13.28125
+  response: '7E803410691'
