--- a/tests/test_cases/2025/commands/7E2.7EA.22E004.yaml
+++ b/tests/test_cases/2025/commands/7E2.7EA.22E004.yaml
@@ -14,6 +14,15 @@ test_cases:
   response: |-
     7EA102762E004BD71F0
     7EA2100000000000006
+    7EA22EE200F00000000
+    7EA2300000000000000
+    7EA2400000000FFC9FF
+    7EA25C9FFF0FFF0AAAA
+- expected_values:
+    SANTAFEHYB_VPWR: 0
+  response: |-
+    7EA102762E004BD71F0
+    7EA2100000000000006
     7EA22F0200C00000000
     7EA2300000000000000
     7EA2400000000FFC5FF
