--- a/tests/test_cases/2025/commands/7E4.7EC.220105|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220105|fc=1.yaml
@@ -121,6 +121,16 @@ test_cases:
     7EC256D000000000000
     7EC260000000000AAAA
 - expected_values:
+    SANTAFEHYB_HVBAT_SOC_DISP: 56.5
+  response: |-
+    7EC102E620105E03A64
+    7EC210000830E007C00
+    7EC2200000000000014
+    7EC23B4190000005000
+    7EC240003E80E000000
+    7EC2571000000000000
+    7EC260000000000AAAA
+- expected_values:
     SANTAFEHYB_HVBAT_SOC_DISP: 66
   response: |-
     7EC102E620105E03A64
