--- a/tests/test_cases/2025/commands/7E4.7EC.220103|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220103|fc=1.yaml
@@ -1081,6 +1081,46 @@ test_cases:
     7EC24CFD0D0D0D0D0D0
     7EC25D0D0D0D0D0AAAA
 - expected_values:
+    SANTAFEHYB_HVBAT_CMU033_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU034_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU035_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU036_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU037_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU038_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU039_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU040_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU041_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU042_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU043_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU044_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU045_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU046_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU047_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU048_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU049_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU050_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU051_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU052_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU053_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU054_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU055_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU056_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU057_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU058_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU059_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU060_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU061_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU062_VOLT: 4.18
+    SANTAFEHYB_HVBAT_CMU063_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU064_VOLT: 4.16
+  response: |-
+    7EC1027620103FFFFFF
+    7EC21FFD0D0D0D0D0D0
+    7EC22D0D0D0D0D0D0D0
+    7EC23D0D0D0D0D0D0D0
+    7EC24D0D0D0D0D0D0D0
+    7EC25D0D0D1D0D0AAAA
+- expected_values:
     SANTAFEHYB_HVBAT_CMU033_VOLT: 3.66
     SANTAFEHYB_HVBAT_CMU034_VOLT: 3.66
     SANTAFEHYB_HVBAT_CMU035_VOLT: 3.66
